modules/brscript/tests/scripts/analyzer/errors/gd_utility_function_wrong_arg.br
func test():
	print(len(Color())) # BRScript utility function.
